change website to websites

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="contact">
         <div class="one">
           <div class="subone">
-            <h6>WEBSITE</h6>
+            <h6>WEBSITES</h6>
             <ul>
               <li>ABOUT US</li>
               <li>CONTACT US</li>
